<resources>
    <string name="app_name" translatable="false">Money Diary</string>
    <string name="content_authority" translatable="false">com.keithvongola.android.moneydiary</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_account">Add account</string>
    <string name="action_add_budget">Add budget</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="to" translatable="false">~</string>
    <string name="pref_group_currency" translatable="false">currency</string>
    <string name="pref_main_currency_key" translatable="false">main_currency</string>
    <string name="pref_main_currency_default" translatable="false">HKD</string>
    <string name="pref_service_status_key" translatable="false">service-status</string>
    <string name="pref_exchange_rate_key" translatable="false">exchange_rate</string>
    <string name="pref_decimal_place_key" translatable="false">decimal_place</string>
    <string name="pref_decimal_place_default" translatable="false">2</string>
    <string name="title_home">Home</string>
    <string name="monthly_income">Income</string>
    <string name="monthly_expense">Expense</string>
    <string name="monthly_budget">Budget left</string>
    <string name="progress_bar_title">Budget Left</string>
    <string name="title_overview">Overview</string>
    <string name="title_accounts">Accounts</string>
    <string name="account_current_title">Current :</string>
    <string name="account_long_term_saving">Saving :</string>
    <string name="account_long_term_instalment">Instalment :</string>
    <string name="account_banking">Banking</string>
    <string name="account_credit_cards">Credit Cards</string>
    <string name="account_stocks_funds">Stocks/Funds</string>
    <string name="account_debts">Debts</string>
    <string name="account_claims">Claims</string>
    <string name="account_others">Others</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="title_new_account">New Account</string>
    <string name="edit_name">Name</string>
    <string name="edit_type">Type</string>
    <string name="edit_balance">Balance</string>
    <string name="edit_currency">Currency</string>
    <string name="edit_institution">Institution</string>
    <string name="edit_exchange_rate">Exchange rate</string>
    <string name="account_enter_name">Enter Name</string>
    <string name="zero" translatable="false">0</string>
    <string name="hint_optional">Optional</string>
    <string name="toast_empty_account_name">Please enter account name.</string>
    <string name="toast_account_balance_invalid">Balance must be numbers.</string>
    <string name="empty_account">No account is found.\n\n Click to add an account.</string>
    <string name="title_budgets">Budgets</string>
    <string name="title_sub_budgets">Sub-budgets</string>
    <string name="title_remain"><u>Remain</u></string>
    <string name="title_spent"><u>Spent</u></string>
    <string name="title_received"><u>Received</u></string>
    <string name="title_budget_expense">Budget Expense</string>
    <string name="title_budget_income">Budget Income</string>
    <string name="empty_budgets">No budget is found.\n\n Click to add a budget.</string>
    <string name="current_budget">Budget : </string>
    <string name="budget_title_remain">"Remain : "</string>
    <string name="budget_title_received">"Received : "</string>
    <string name="title_new_budget">New Budget</string>
    <string name="title_edit_budget">Edit Budget</string>
    <string name="toast_empty_budget_name">Please enter budget name.</string>
    <string name="toast_budget_amount_zero_or_negative">Budget amount cannot be zero or negative.</string>
    <string name="toast_budget_amount_invalid">Amount must be numbers.</string>
    <string name="toast_empty_icon">Please select an icon.</string>
    <string name="title_plans">Plans</string>
    <string name="edit_target_amount">Target Amount</string>
    <string name="edit_start_date">Start date</string>
    <string name="edit_terms">Terms (Months)</string>
    <string name="plans_pager_title_in_progress">In Progress</string>
    <string name="plans_pager_title_completed">Completed</string>
    <string name="title_edit_plan">Edit Plan</string>
    <string name="title_new_plan">New Plan</string>
    <string name="title_current_month">Current month</string>
    <string name="plan_title_balance">Balance :</string>
    <string name="plan_title_target">Target :</string>
    <string name="plan_title_monthly_contribution">Monthly Contribution :</string>
    <string name="plan_title_current_terms">Current Terms:</string>
    <string name="toast_empty_plan_name">Please enter a plan name.</string>
    <string name="toast_plan_terms_zero_or_negative">Terms cannot be zero or negative.</string>
    <string name="toast_plan_terms_invalid">Terms must be numbers and greater than 1.</string>
    <string name="toast_plan_amount_invalid">Amount must be numbers.</string>
    <string name="title_sub_plans">Sub Plans</string>
    <string name="title_transaction">TransactionActivity</string>
    <string name="title_edit_expense">Edit Expense</string>
    <string name="title_edit_income">Edit Income</string>
    <string name="title_edit_transfer">Edit Transfer</string>
    <string name="title_edit_saving">Edit Saving</string>
    <string name="expense">Expense</string>
    <string name="tab_income">Income</string>
    <string name="tab_transfer">Transfer</string>
    <string name="tab_saving">Saving</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_account">Account</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_plan">Plans</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_place">Place</string>
    <string name="transaction_notes">Notes</string>
    <string name="swipe_transaction_records">transaction records</string>
    <string name="transactions_new">New Transaction</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_and_new">Save + New</string>
    <string name="btn_delete">Delete</string>
    <string name="toast_transaction_amount_invalid">Amount must be numbers.</string>
    <string name="toast_transaction_amount_zero">Amount must be greater than zero.</string>
    <string name="toast_transaction_empty_category">Please select a Sub-Category.</string>
    <string name="toast_transaction_empty_account">Please add an account for transaction.</string>
    <string name="transactions_empty_balance">Balance change cannot be edited.</string>
    <string name="title_records">Records</string>
    <string name="group_income_title">Income : </string>
    <string name="group_expense_title">Expense :</string>
    <string name="empty_record">No plan is found.\n \nClick to add a plan.</string>
    <string name="day_of_week_1">SUN</string>
    <string name="day_of_week_2">MON</string>
    <string name="day_of_week_3">TUE</string>
    <string name="day_of_week_4">WED</string>
    <string name="day_of_week_5">THU</string>
    <string name="day_of_week_6">FRI</string>
    <string name="day_of_week_7">SAT</string>
    <string name="title_setting">Settings</string>
    <string name="toolbar_info_total_balance">Total Balance</string>
    <string name="toolbar_info_balance">Balance</string>
    <string name="toolbar_info_current">Current</string>
    <string name="toolbar_info_long_terms">Long terms</string>
    <string name="toolbar_info_assets"><u>Assets</u></string>
    <string name="toolbar_info_liabilities"><u>Liabilities</u></string>
    <string name="toolbar_info_income"><u>Income</u></string>
    <string name="toolbar_info_expense"><u>Expense</u></string>
    <string name="title_reports">Reports</string>
    <string name="reports_select_chart">Select a category.</string>
    <string name="title_currency">Select Currency</string>
    <string name="toast_ex_rate_zero_or_negative">Exchange rate value cannot be zero or negative.</string>
    <string name="toast_ex_rate_empty">Exchange rate value cannot be empty.</string>
    <string name="exchange_rate_manual">Manual exchange rate</string>
    <string name="hint_empty" translatable="false">" - "</string>
    <string name="refresh_release">Release to view \n</string>
    <string name="refresh_swipe">Swipe to view \n</string>
    <string name="refresh_complete">Complete</string>
    <string name="refresh_refresh">Loading…</string>
    <string name="load_more_release">Release to view \n</string>
    <string name="load_more_swipe">Swipe to view \n</string>
    <string name="load_more_complete">Complete</string>
    <string name="load_more_refresh">Loading…</string>
    <string name="dialog_confirm_delete_account">All transactions under this account will be deleted. Are you sure?</string>
    <string name="dialog_delete_account_title">Delete Account</string>
    <string name="dialog_delete_account_transactions">Delete \n transactions</string>
    <string name="dialog_keep_transactions">Keep \n transactions</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="pw_empty_account">No account is found.</string>
    <string name="pw_empty_budget">No budget is found.</string>
    <string name="pw_empty_record">No transaction records found.</string>
    <string name="pw_title_account">Select Account</string>
    <string name="pw_title_plan">Select Plan</string>
    <string name="pw_title_calculator">Enter Amount</string>
    <string name="pw_title_category">Select Category</string>
    <string name="pw_title_date">Select Date</string>
    <string name="submit_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="fab_add_expense">Add Expense</string>
    <string name="fab_add_income">Add Income</string>
    <string name="fab_add_transfer">Add Transfer</string>
    <string name="fab_add_saving">Add Saving</string>
    <string name="cd_icon_of_budget">Icon of budget.</string>
    <string name="cd_edit_account">Edit account.</string>
    <string name="cd_delete_account">Delete account.</string>
    <string name="cd_edit_budget">Edit budget.</string>
    <string name="cd_delete_budget">Delete budget.</string>
    <string name="cd_flag">Country Flag.</string>
    <string name="cd_edit_plan">Edit plan.</string>
    <string name="cd_delete_plan">Delete plan.</string>
    <string name="cd_edit_transaction">Edit transaction.</string>
    <string name="cd_delete_transaction">Delete transaction.</string>
    <string name="cd_app_icon">Start money diary.</string>
    <string name="cd_add_expense">Add expense.</string>
    <string name="cd_add_income">Add income.</string>
    <string name="cd_add_transfer">Add transfer.</string>
    <string name="cd_records_next">Next record.</string>
    <string name="cd_records_previous">Previous record.</string>
    <string name="cd_next_period">Next Period</string>
    <string name="cd_previous_period">Previous period.</string>
    <string name="cd_budget_icon">Budget icon.</string>
    <string name="account_cash">Cash</string>
    <string name="account_checking">Checking</string>
    <string name="account_saving">Savings</string>
    <string name="accounts_visa">Visa</string>
    <string name="main_budget_food">Food</string>
    <string name="main_budget_clothing">Clothing</string>
    <string name="main_budget_transportation">Transportation</string>
</resources>