<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_accounts"
            android:title="@string/title_accounts" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_menu_budget"
            android:title="@string/title_budgets" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_plan"
            android:title="@string/title_plans" />
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_menu_records"
            android:title="@string/title_records" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_reports"
            android:title="@string/title_reports" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/title_setting" />
    </group>
</menu>
