<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_budget"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add_budget"
        android:actionBarItemBackground="@drawable/menu_item_bg"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_budget"
        android:orderInCategory="200"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_budget"
        android:orderInCategory="300"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_done"
        app:showAsAction="never" />
</menu>
