<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_income"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/transaction_amount_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:background="@drawable/list_item_border">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_amount"
                android:textSize="30sp"
                android:cursorVisible="false"
                android:background="@android:color/transparent" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/developing_operation_inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_et_account"
        android:layout_width="match_parent"
        style="@style/TextInputContainer">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_account"
            android:cursorVisible="false"
            android:background="@android:color/transparent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_et_category"
        android:layout_width="match_parent"
        style="@style/TextInputContainer">

        <EditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_category"
            android:cursorVisible="false"
            android:background="@android:color/transparent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_et_date"
        android:layout_width="match_parent"
        style="@style/TextInputContainer">

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_date"
            android:cursorVisible="false"
            android:background="@android:color/transparent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_et_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/TextInputContainer">

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:gravity="top"
            android:hint="@string/transaction_notes"
            android:background="@android:color/transparent" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/btn_discard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_discard" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_save_and_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save_and_new"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/button_delete"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/btn_delete" />

    </LinearLayout>

</LinearLayout>
